run/grpc-ping/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-ping
spec:
  type: NodePort
  selector:
    app: grpc-ping
  ports:
  - port: 8080
